k8s/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: dev
  labels:
    app.kubernetes.io/name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api-gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api-gateway   # ns dev có istio-injection=enabled -> auto sidecar
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: conf
              mountPath: /etc/nginx/conf.d
          readinessProbe:
            tcpSocket: { port: 8080 }
          livenessProbe:
            tcpSocket: { port: 8080 }
      volumes:
        - name: conf
          configMap:
            name: api-gateway-conf
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: dev
  labels:
    app.kubernetes.io/name: api-gateway
spec:
  selector:
    app.kubernetes.io/name: api-gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080
